ajuste no footer da pagina

--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
             Deixe que Deus interprete.
         </p>
     </section>
-    <footer>Site criado por <a href="https://www.instagram.com/elizeupequeno/" target="_blank">Elizeu Pequeno</a> <a href="https://www.cursoemvideo.com/">junto com o Curso em Video</a></footer>
+    <footer>Site criado por <a href="https://www.instagram.com/elizeupequeno/" target="_blank">Elizeu Pequeno</a> junto com <a href="https://www.cursoemvideo.com/">o Curso em Video</a></footer>
 </body>
 </html>
